syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.rodrigo";
option java_outer_classname = "KeyManagerGrpc";


package br.com.rodrigo;
import "google/protobuf/timestamp.proto";

service KeyManagerGrpcService  {
  rpc registraChave (RegistraChaveRequest) returns (RegistraChaveResponse) {}
}

service KeyManagerRemoveGrpcService{
  rpc removeChave (RemoveChaveRequest) returns (RegistraChaveResponse) {}
}

service KeyManagerConsultaGrpcService{
  rpc consultaChave (ConsultaChaveRequest) returns (ConsultaChaveResponse) {}
}

service KeyManagerListaChavesGrpcService{
  rpc listaChaves (ListaChavesRequest) returns (ListaChavesResponse) {}
}

enum TipoChaveMessage{
  TIPO_CHAVE_INDEFINIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;

}

enum TipoContaMessage{
  TIPO_CONTA_INDEFINIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message ListaChavesRequest{
  string identificadorCliente = 1;
}

message ListaChavesResponse{
  string identificadorCliente = 1;
  repeated ChavePixMessage chaves = 2;
}

message ChavePixMessage{
  string pixId = 1;
  TipoChaveMessage tipoChaveMessage = 2;
  string valor = 3;
  TipoContaMessage tipoContaMessage = 4;
  google.protobuf.Timestamp criadoEm = 5;
}

message ConsultaChaveRequest{
  message FiltroPorIds{
    string identificadorCliente = 1;
    string pixId = 2;
  }
  oneof filtro{
    FiltroPorIds filtroPorIds = 1;
    string chave = 2;
  }
}

message ConsultaChaveResponse{
  string identificadorCliente = 1;
  string pixId = 2;
  TipoChaveMessage tipoChaveMessage = 3;
  string valorDaChave = 4;
  TitularMessage titular = 5;
  ContaMessage conta = 6;
  google.protobuf.Timestamp criadoEm = 7;
}

message RemoveChaveRequest{
  string identificadorCliente = 1;
  string pixId = 2;
}

message RegistraChaveRequest {
  string identificadorCliente = 1;
  TipoChaveMessage tipoChaveMessage = 2;
  string valorDaChave = 3;
  TipoContaMessage tipoContaMessage = 4;
}

message RegistraChaveResponse {
  string pixId = 1;
}

message TitularMessage{
  string nome = 1;
  string cpf = 2;
}

message ContaMessage{
  string instituicao = 1;
  string agencia = 2;
  string numero = 3;
  TipoContaMessage tipoContaMessage = 4;
}